--- a/www/style.css
+++ b/www/style.css
@@ -3,7 +3,11 @@ body {
     background-color: #000000;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    height: 100dvh;
     overflow: hidden;
 }
 
@@ -12,7 +16,7 @@ body {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr;
-    height: 100vh;
+    height: 100%;
     gap: 1rem;
     padding: 1rem;
     box-sizing: border-box;
